--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.3.21",
     "geist": "^1.3.1",
     "next": "14.2.5",
     "react": "^18",
