--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.9.0",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.3.21",
     "geist": "^1.3.1",
     "lucide-react": "^0.424.0",
@@ -18,6 +20,7 @@
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
